--- a/control-plane/config/config.yaml
+++ b/control-plane/config/config.yaml
@@ -7,6 +7,15 @@ server:
   tls_cert: "certs/server.crt"
   tls_key: "certs/server.key"
 
+metrics:
+  prometheus_enabled: true
+  prometheus_port: 9001
+
+scrape_configs:
+  - job_name: 'control-plane'
+    static_configs:
+      - targets: ['control-plane:9001']
+
 auth_service:
   host: auth-service
   port: 50051  
@@ -80,3 +89,11 @@ email:
   password: ""
   from_email: ""
   from_name: "cdn"
+
+  monitoringetat:
+    degraded_cpu_threshold: 85.0
+    degraded_mem_threshold: 90.0
+    critical_cpu_threshold: 95.0
+    critical_mem_threshold: 95.0
+    max_nodes_per_tenant: 20
+
