--- a/control-plane/config/config.yaml
+++ b/control-plane/config/config.yaml
@@ -25,7 +25,7 @@ jwt:
   refresh_secret: ""
   access_token_expiry: 1h
   refresh_token_expiry: 7d
-  issuer: auth-service
+  issuer: control-plane
 
 database:
   host: "localhost"
@@ -90,10 +90,9 @@ email:
   from_email: ""
   from_name: "cdn"
 
-  monitoringetat:
-    degraded_cpu_threshold: 85.0
-    degraded_mem_threshold: 90.0
-    critical_cpu_threshold: 95.0
-    critical_mem_threshold: 95.0
-    max_nodes_per_tenant: 20
-
+monitoringetat:
+  degraded_cpu_threshold: 85.0
+  degraded_mem_threshold: 90.0
+  critical_cpu_threshold: 95.0
+  critical_mem_threshold: 95.0
+  max_nodes_per_tenant: 20
